<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".activity.LanguageActivity">

    <Button
        android:id="@+id/btn_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_en"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/str_ru"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_uz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/str_uz"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_bo_china"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/str_bo"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ko"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/str_ko"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/str_ja"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>